1999-06-29    <jrb@redhat.com>

	* gnome-druid-page.c: Wrote more documentation.

	* gnome-druid.c: Finished embedded documentation.

1999-06-26  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-text.c: Finished all documentation comments.  The
	icon text item is fully documented now.

1999-06-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-item.c: Updated all documentation comments.  The icon
	text item is fully documented now.

	* gnome-icon-list.c: Updated the documentation comments.  The icon
	list is fully documented now.

1999-06-24    <jrb@redhat.com>

	* gnome-druid*.[ch]:  Added gnome-druid to gnome-libs.

1999-06-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-dock.c (gnome_dock_size_allocate): set minimum child
	allocation width or height to 1 instead of 0. prevents some Gdk
	segfaults.

1999-06-24  Pablo Saratxaga <srtxg@chanae.alphanet.ch>

	* Added gtkrc.* files for all encodings I know of. Still missing is
	to modify the Makefile.am so that at install time the gtkrc.iso88592,
	gtkrc.iso88595 are hardlinked/copyied into the gtkrc.$LANG for
	the various languages using them.

1999-06-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (selection_many_icon_event): Sigh, we did need
	selection_pending flags after all.  Added them to the private
	structure as well.

Wed Jun 23 14:48:29 1999  Raph Levien  <raph@gimp.org>

	* Makefile.am: Reverted Pablo Saratxaga's changes. I'm not sure
	what the right thing to do is, but hardlinking gtkrc files doesn't
	seem to be it. In any case, it breaks my build, so I'm reverting.

1999-06-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.[ch]: Moved all the private fields of the
	GnomeIconList structure to a private structure in
	gnome-icon-list.c.  Changed all the functions to use this instead.

	* gnome-icon-list.c (gil_button_press): Sanitized for correct
	behavior.  Unselect all icons if no modifier key is pressed.