@@ -1,3 +1,11 @@
+1999-06-29  Akira Higuchi <a-higuti@math.sci.hokudai.ac.jp>
+	
+	* gnome-icon-item.c (iti_edition_accept): Don't allocate
+	iti->text if iti->editing is False. This fixes the bug #1311.
+	
+	* gnome-less.c: (gnome_less_set_fixed_font): Correct the default
+	fontset pattern. A comma was missing.
+	
 1999-06-29    <jrb@redhat.com>
 
 	* gnome-druid-page.c: Wrote more documentation.
